[project]
name = "tinystatus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.10",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "systemd-shortcuts>=0.0.2",
]
